Change log for the PMD Eclipse plugin

v4.0.0 - xxx 2010?
. Overhauled rule preferences screen
.    Allows users to group/edit rules by multiple criteria
.    provides ability to enable/disable rules without removing them
.    larger editors for the various fields
.	 new rule creation wizard supports new non-Java languages
.    group editing of filter exclusion rules
.    Color-tagged expressions in shown in rule table
.    new property editors are fully type-aware
. Huge code cleanup
. Several usability fixes for the Dataflow view
. Updated to use latest SWT widgets wherever possible

-------------------------------------
v3.2.5 - October 13 2008

. PMD updated to v4.2.4
. plugin reorganization
. code cleanup
. all rule examples displayed in Rule Configuration panel
. Full file path now set on RuleContext.setSouceCodeFile(file) instead of workspace relative path

----------------------------------------------------------------------------------------
v3.2.4 - April 11 2008

Runtime
-------
. Fix 1811828 RuntimeException in RuleSetFactory, default ruleset is used on error
. Fix 1903578 Handler error in Eclipse log
. Fix 1909929 clean violation review is not selective enough
. PMD updated to v4.2.1
. Use new standard PMD RuleSet serialization mechanism
. Use new PMD support for RuleReferences in RuleSets, instead of using Rule copies
. Use Java Project Build Path when invoking PMD to allow Type Resolution to work better
. Error type PMD Violations now show in Problems View for manual PMD invocations
. Workspace PMD Preferences allows enabling/disabling use of Java Project Build Path
. Workspace PMD Preferences removed DFA option, use DataflowAnomalyAnalysis rule instead
. Workspace Rules Configuration Rule table now shows RuleSet name
. Workspace Rules Configuration Rule table now shows Since attribute
. Workspace Rules Configuration now has Add Rule... button, defaulting to adding of an XPath Rule